<resources>
    
    <!-- BEGIN do not edit these string (same for all languages) -->
    <string name="empty"></string>
    <!-- END the rest will be different through languages  -->
    
    <!-- General strings -->
    <string name="app_name">WiFiKeyView</string>
    <string name="app_description">View your WiFi passwords in settings</string>
    
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    
    <!-- LongPressNetworkHook -->
    <string name="menu_option_show_password">View password</string>
    
    <!-- Preferences -->
    <string name="preferences_debug_title">Debug</string>
    <string name="preferences_debug_summary">Control the debug settings</string>
    	<string name="preferences_debug_global">Debugging</string>
    	
    	<string name="preferences_debug_enabled_title">Debugging enabled</string>
    	<string name="preferences_debug_enabled_summary">This will enable/disable all debugging methods</string>
    
    	<string name="preferences_launcher_icon_enabled_title">Hide launcher icon</string>
    	<string name="preferences_launcher_icon_enabled_summary">This will enable/disable the launcher icon</string>
    	
    <string name="preferences_showpassword_title">View password</string>
    <string name="preferences_showpassword_summary">Control the view of the passwords</string>
	    <string name="preferences_showpassword_global">Direct copy</string>
	    
    	<string name="preferences_showpassword_directcopypsk_title">Copy pre shared key</string>
    	<string name="preferences_showpassword_directcopypsk_summary">Copy the pre shared key directly to the clip board</string>
    	
    	<string name="preferences_showpassword_directcopypassword_title">Copy password</string>
    	<string name="preferences_showpassword_directcopypassword_summary">Copy the password directly to the clip board</string>
    	
    	<string name="preferences_showpassword_dialogtextcolor_title">Text color</string>
    	<string name="preferences_showpassword_dialogtextcolor_summary">Change the text color from the password dialog</string>
    	
    <string name="preferences_extra_title">Extras</string>
    <string name="preferences_extra_summary">Experimental functions</string>
    	<string name="preferences_extra_modifydialog_password_title">Modify network password</string>
    	<string name="preferences_extra_modifydialog_password_summary">Enter the password in the password dialog</string>
    	
    	<string name="preferences_extra_info_dialog_password_title">Info dialog password</string>
    	<string name="preferences_extra_info_dialog_password_summary">Show the password in the network info dialog</string>
    	
    <!-- GetNetworkPasswordTask -->
    <string name="getnetworkpassword_progressdialog_message">Getting password&#8230;</string>
    
    <!-- ShowPassword -->
    <string name="supplicant_key_ssid">SSID</string>
    <string name="supplicant_key_bssid">BSSID</string>
    <string name="supplicant_key_wep_key0">Wep key 0</string>
    <string name="supplicant_key_wep_key1">Wep key 1</string>
    <string name="supplicant_key_wep_key2">Wep key 2</string>
    <string name="supplicant_key_wep_key3">Wep key 3</string>
    <string name="supplicant_key_psk">Pre shared key</string>
    <string name="supplicant_key_password">Password</string>
    <string name="supplicant_key_key_mgmt">Key management</string>
    <string name="supplicant_key_group">Group</string>
    <string name="supplicant_key_auth_alg">Auth alg</string>
    <string name="supplicant_key_eap">EAP</string>
    <string name="supplicant_key_identity">Identity</string>
    <string name="supplicant_key_anonymous_identity">Anonymous identity</string>
    <string name="supplicant_key_phase1">Phase 1</string>
    <string name="supplicant_key_phase2">Phase 2</string>
    <string name="supplicant_key_priority">Priority</string>
    <string name="supplicant_key_pac_file">Pac file</string>
    <string name="supplicant_key_ca_cert">Ca cert</string>
    <string name="supplicant_key_client_cert">Client cert</string>
    <string name="supplicant_key_private_key">Private key</string>
    <string name="supplicant_key_private_key_password">Private key password</string>
    
    <string name="password_copied">Password copied to clipboard</string>
	
	<!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="color1_title">Color 1</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color2_title">Color 2</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>
    
</resources>
