<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory 
        android:title="@string/preferences_showpassword_global">
        
        <CheckBoxPreference 
            android:title="@string/preferences_showpassword_directcopypsk_title"
            android:summary="@string/preferences_showpassword_directcopypsk_summary"
            android:key="directcopypsk" />
        
        <CheckBoxPreference 
            android:title="@string/preferences_showpassword_directcopypassword_title"
            android:summary="@string/preferences_showpassword_directcopypassword_summary"
            android:key="directcopypassword" />
        
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:title="@string/preferences_showpassword_dialogtextcolor_title"
            android:summary="@string/preferences_showpassword_dialogtextcolor_summary"
            android:key="showpassworddialogtextcolor"
            hexValue="true" />
        
    </PreferenceCategory>
    
</PreferenceScreen>