<?xml version="1.0" encoding="utf-8"?>
<preference-headers 
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <header
        android:title    = "@string/preferences_debug_title"
        android:summary  = "@string/preferences_debug_summary"
        android:fragment = "com.whd.wifikeyview.preferences.fragments.DebugPreferences"
    />
    
    <header
        android:title    = "@string/preferences_showpassword_title"
        android:summary  = "@string/preferences_showpassword_summary"
        android:fragment = "com.whd.wifikeyview.preferences.fragments.ShowPasswordPreferences"
    />
    
    <header
        android:title	 = "@string/preferences_extra_title"
        android:summary	 = "@string/preferences_extra_summary"
        android:fragment = "com.whd.wifikeyview.preferences.fragments.ExtraPreferences"
    />
    
</preference-headers>